assignment2_AST_generation/Exercise2/Exercise2/q2/src/main/mp/parser/MP.g4
grammar MP;

@lexer::header {
from lexererr import *
}

options{
	language=Python3;
}

program: vardecls EOF;

vardecls: vardecl+;

vardecl: mptype ids SEMI;

mptype: INTTYPE | FLOATTYPE;

ids: ID (COMMA ids)*; 

INTTYPE: 'int';

FLOATTYPE: 'float';

SEMI: ';' ;

COMMA: ',' ;

ID: [a-z]+ ;

WS : [ \t\r\n]+ -> skip ; // skip spaces, tabs, newlines

ERROR_CHAR: .;
